modified:   CMakeLists.txt 	modified:   LICENSE 	modified:   README.md 	modified:   libirimager.rdmanifest 	modified:   libirimager.yaml 	modified:   package.xml 	modified:   src/OptrisColorconvert.cpp 	modified:   src/OptrisColorconvert.h 	modified:   src/OptrisImager.cpp 	modified:   src/OptrisImager.h 	modified:   src/optris_colorconvert_node.cpp 	modified:   src/optris_imager_node.cpp 	modified:   srv/AutoFlag.srv 	modified:   srv/Palette.srv 	new file:   srv/RadiationParameters.srv 	modified:   srv/TemperatureRange.srv

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ set(srv_files
   "srv/AutoFlag.srv"
   "srv/TemperatureRange.srv"
   "srv/Palette.srv"
+  "srv/RadiationParameters.srv"
 )
 
 rosidl_generate_interfaces(${PROJECT_NAME}
@@ -63,14 +64,15 @@ target_link_libraries(optris_imager_node
   irimageprocessing
   ircore
   udev
-  usb-1.0)
-
+  usb-1.0) 
 target_link_libraries(optris_colorconvert_node 
   irimager
   irimageprocessing
   ircore
   udev
-  usb-1.0)
+  usb-1.0
+  #libirimager # Ensure this matches your library name
+  )
 
 install(TARGETS
   optris_imager_node
